tests/src/frontend/typechecking/invalid/memo_mut_3.sk
mutable class X(mutable x: Int)
memoized fun no(mutable X): void {
  void
}
